--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -8,3 +8,21 @@ a {
 p {
   color: red;
 }
+span {
+  color: green;
+} 
+label {
+  font-size: 20px;
+ }
+.field {
+  width: 350px;
+  height: 30px;
+  font-size: 18px;
+}
+.sendButton {
+  margin-left: 20px;
+  width: 120px;
+  height: 35px;
+  background: #eee;
+  font-size: 18px;
+}
